2005-02-24  Alexander Gottwald  <ago at freedesktop dot org>

	* winmultiwindowwndproc.c:
	on WM_WINDOWPOSCHANGED raise window directly and in sync without 
	utilizing the async windowmanager thread. Fixes some restacking 
	problems occuring which were timing dependent
	Do not raise the window on WM_ACTIVATE
	Removed unused code for WM_WINDOWPOSCHANGING
	ESC is debug key. Print status but do not abort processing the message
	
2005-02-12  Alexander Gottwald  <ago at freedesktop dot org>

	* winmultiwindowwindow.c
	* winmultiwindowwndproc.c
	* winwin32rootlesswndproc.c:
	Cleanup some message debugging
	
2005-02-12  Alexander Gottwald  <ago at freedesktop dot org>

	* win.h
	* winfont.c
	* winmultiwindowshape.c
	* winmultiwindowwindow.c
	* winpfbdd.c
	* winshaddd.c
	* winshadddnl.c
	* winshadgdi.c
	* winwindow.c:
	Fix incorrect wrapping of functions. Ensure the pointers from pScreen 
	point to the called function even if wrapped functions changed it
	
	* winmultiwindowwindow.c:
	Set the window properties to NULL to avoid referencing freed memory 
	because of timing problems after deleting a window

	* winscrinit.c:
	Do not wrap ChangeWindowAttributes. All functions are noops currently
	
2005-02-12  Alexander Gottwald  <ago at freedesktop dot org>

	* winmsg.h:
	* winmsg.c:
	print window handle in message output
	
2005-02-08  Alexander Gottwald  <ago at freedesktop dot org>

	* winkeybd.c:
	* winkeynames.h:
	Updated fix for ABNT2 and HK_Toggle keys. 

2005-02-08  Alexander Gottwald  <ago at freedesktop dot org>

	* winkeybd.h:
	* winkeynames.h:
	Backout ABNT2 and HK_Toggle fix since it broke keys F1 and F4. 

2005-02-07  Alexander Gottwald  <ago at freedesktop dot org>

	* winlayouts.h:
	* winconfig.c:
	Moved keyboard layout table to external file.

2005-02-02  Alexander Gottwald  <ago at freedesktop dot org>

	* wincreatewnd.c:
	Force ShowWindow if XWin was started via run.exe. Fixes mainwindow
	not showing bug
